<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >福卡e助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_application">我的应用</string>
	<string name="all_application">全部应用</string>
	<string name="success">下载完成</string>
    <string name="error">下载出错</string>
    <string name="sdcarderror">没有SD卡</string>
    <string name="unNetwork">无网络连接</string>
    <string name="blueToothConnect">蓝牙连接</string>
    <string name="idCardTest">身份证识别</string>
    <string name="icCardTest">银行卡识别</string>
    <string name="magCardTest">磁条卡识别</string>
    <string name="passwordTest">密码键盘</string>
    <string name="fingerTest">指纹识别</string>
    <string name="login">登录</string>
    <string name="exit_safe">安全退出</string>
    
</resources>
